--- a/task_app/templates/account/login.html
+++ b/task_app/templates/account/login.html
@@ -1,46 +1,62 @@
 {% extends "account/base.html" %}
 
+<script
+    src="https://code.jquery.com/jquery-2.2.4.js"
+    integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+    crossorigin="anonymous"></script>
+
+<script type='text/javascript'>
+  $('#login_input').css({'color': 'green'});
+</script>
+
 
 {% load account socialaccount %}
 
 
 {% block content %}
-<div class="col-md-4 col-md-offset-8">
+  <div class="col-xs-12 col-md-6 col-md-offset-6 text-left">
 
-<h1>Login Section</h1>
+    <h1>Login Section</h1>
 
-{% get_providers as socialaccount_providers %}
+    {% get_providers as socialaccount_providers %}
 
-{% if socialaccount_providers %}
-<p>Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:</p>
+    {% if socialaccount_providers %}
+    <p>Please sign in with one
+    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+    for a {{ site_name }} account and sign in below:</p>
 
-<div class="socialaccount_ballot">
+    <div class="socialaccount_ballot">
 
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
+      <ul class="socialaccount_providers">
+        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+      </ul>
 
-  <div class="login-or">or</div>
+      <div class="login-or">or</div>
 
-</div>
+    </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
+    {% include "socialaccount/snippets/login_extra.html" %}
 
-{% else %}
-  <p>If you have not created an account yet, then please
-  <a href="{{ signup_url }}">registration</a> first.</p>
-{% endif %}
+    {% else %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">"Forgot Password?"</a>
-  <button class="primaryAction" type="submit">Login</button>
-</form>
-</div>
+
+      <p>If you have not created an account yet, then please
+      <a type="button" href="{{ signup_url }}">registration</a> first.</p>
+    {% endif %}
+
+      <form class="form-group" method="POST" action="{% url 'account_login' %}">
+
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+        <input id="login_input" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+       
+
+<!--       
+    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">"Forgot Password?"</a> -->
+          <button class="btn btn-default primaryAction" type="submit">Login</button>
+        
+      </form>
+  </div>
 {% endblock %}
