--- a/task_app/templates/account/signup.html
+++ b/task_app/templates/account/signup.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-	<div class="col-md-4 col-md-offset-8">
+	<div class="col-xs-12 col-md-6 text-right">
 
 		<h1>Registration Section</h1>
 
@@ -15,6 +15,6 @@
 		  <button type="submit" class='btn btn-default'>Register</button>
 		</form>
 	</div>
-	<hr>
+
 
 {% endblock %}
