--- a/task_app/templates/base.html
+++ b/task_app/templates/base.html
@@ -14,16 +14,21 @@
 </head>
 <body>
 
-	<header>
+	<header style=' top: 0;
+  					left: 0;
+  					right: 0;
+  					padding-bottom: 10px;
+  					box-shadow: 0px 1px 10px 3px #264d00;
+  margin-bottom: 10px;'>
 		<div class="row">
 
-			<div class="col-xs-12 col-md-3 col-md-offset-5">
+			<div class="col-xs-12 col-md-1 col-md-offset-5 text-center">
 				<a href="https://github.com/Pyrigok/task_list">Github</a>
 			</div>
 
 			{% if request.user.is_authenticated %}
 
-				<div class="col-xs-12 col-md-2 col-md-offset-2">
+				<div class="col-xs-12 col-md-2 col-md-offset-4">
 					<a href="#">{{ user.username }}</a>
 					<a href="{% url 'account_logout' %}">Logout</a>
 				</div>
@@ -38,258 +43,29 @@
 			{% endif %}
 
 		</div>
+		
 	</header>
 
 	{% block content %}
 	
 	{% endblock content %}
 
-			<div class="container-fluid">
-
-				<div class="row" id="date_row">
-					<!-- <div class=" col-xs-12 col-md-3 col-md-offset-2" id="date_div" style="position: relative">
-						<input class='date_input dateinput' id="calendar" type="text" name="calendar" 
-						placeholder="Choose date...">
-					</div>
-					<div class="col-xs-12 col-md-1" id="show_tasks_button">
-						<input type="button" value="Show tasks">
-					</div> -->
-
-					<form action="{% url 'choose_date_add_tasks_show_tasks_view_url' %}"
-							method='post'
-							enctype="multipart/form-data"
-							name="calendar_form">
-								{% csrf_token %}
-
-							<div class="date_div col-xs-12 col-md-6 col-md-offset-2" id="date_div" style="position: relative">
-
-								<input class='date_input dateinput' id="calendar" type="text" name="chooses_date" 
-								placeholder="Choose date...">
-
-								<button id="show_task_button" type="submit" name="choose_date_button" class='btn btn-default'>Show tasks</button>
-							</div>
-
-					</form>
-
-				</div>
-
-
-				<div class="row">
-
-					<div class="col-md-offset-1 col-md-4 col-xs-12">
-
-						<h2>Task List</h2>
-						<hr>
-													
-
-							{% if ch_task %}
-
-								<table class="table table-hover ">
-
-									<tr>
-										<th class="text-center">Title</th>
-										
-										<!-- <th>Priority</th> -->
-										<th class="text-center">Status</th>
-									</tr>
-
-									{% for entry in ch_task %}
-									
-									
-										<tr>
-											<input type="hidden" value="{{ entry.id }}">
-
-
-												<td class="text-center">{{ entry.title }}</td>
-											
-												<!-- <td class="text-center">{{ entry.priority }}</td> -->
-												<td class="text-center">
-													{{ entry.status }}
-													<!-- <select name="status" id="status">
-														<option value="in the process">In the process</option>
-														<option value="done">Done</option>
-													</select> -->
-												</td>									
-											
-										</tr>
-									
-									{% endfor %}
-
-								</table>
-
-							{% else %}
-									<h2>No tasks on this date!</h2>
-									<hr>
-							{% endif %}
-
-					</div>
-
-					<div class="col-xs-12 col-md-2">
-						{% if request.GET.status_message %}
-							<div class="alert alert-warning">
-								<p class="text-center">{{request.GET.status_message }}</p>
-							</div>
-					
-					{% endif %}
-					</div>
-
-
-					<div id='task_detail_div' class='col-xs-12 col-md-4'>
-
-							<h2>Task Detail</h2>
-								<hr>
-
-								{% for entry in current_details %}
-									<h4>{{ entry.title }}</h4>
-									<hr>
-									<article>{{ entry.content }}</article>
-									<hr>
-									<p>{{ entry.status }}</p>
-									<p>created on - {{ entry.task_created_on }} |
-									 when to execute - {{ entry.date_of_task_execution }}</p>
-									<!-- <p>deadline - {{ entry.deadline }}</p> -->
-									<hr>
-					
-
-								{% endfor %}
-
-							<!-- <div>
-								<button class="btn btn-default" name="edit_button">Edit</button>
-								<button class="btn btn-danger" type="submit" name="delete_button">Delete</button>
-							</div> -->
-
-					</div>
-
-
-				</div>
-
-
-				<div class="row">
-					<div class="col-md-4 col-md-offset-7 col-xs-12">
-					
-						<!-- <button id="show_add_task_button" class="btn btn-default" name="add_task">Add task</button>
-						 -->
-						<div id='add_task_div' class="add_task_form">
-
-							<h2>New Task</h2>
-								<hr>
-
-							<form action="{% url 'choose_date_add_tasks_show_tasks_view_url' %}"
-									enctype="multipart/form-data"
-									method="post"
-									role='form'
-									name="add_task_form">
-									{% csrf_token %}
-
-								<div class="row">
-									<div class="{% if errors.title %}has-error{% endif %}">
-										<span class="help-block">
-											<input type="text" placeholder="Title..."
-											name='title'
-											value="{{ request.POST.title }}">
-											{{ errors.title }}
-										</span>
-									</div>
-
-									<div class="{% if errors.date_of_task_execution %}has-error{% endif %}" style="position: relative">
-										<span class="help-block">
-											<input type="text"
-												class="dateinput" 
-												placeholder="Date_of_task_execution..."
-												name='date_of_task_execution'
-												value='{{ request.POST.date_of_task_execution}}'>
-											{{ errors.date_of_task_execution}}
-										</span>
-									</div>
-								</div>
-
-								<div class="row">
-									<div class="{% if errors.content %}has-error{% endif %}">
-										<span class="help-block">
-											<input type="text"
-												placeholder="Task description... Up to 50 letters"
-												name='content'
-												size='41'
-												value="{{ request.POST.content }}" 
-											>
-											{{ errors.content }}
-										</span>
-									</div>
-								</div>
-
-							<!-- 	<div class="row">
-								<div class="{% if errors.priority %}has-error{% endif %}">
-									<span class="help-block">
-										<select name="prioriry" id="prioriry">
-											<option value="low">Low</option>
-											<option value="medium">Medium</option>
-											<option value="height">Height</option>
-										</select>
-										{{ errors.priority}}
-									</span>
-								</div>
-							</div> -->
-
-								<!-- <div class="row">
-									<div class="{% if errors.date_of_task_execution %}has-error{% endif %}" style="position: relative">
-										<span class="help-block">
-											<input type="text"
-												class="dateinput" 
-												placeholder="Date_of_task_execution..."
-												name='date_of_task_execution'
-												value='{{ request.POST.date_of_task_execution}}'>
-											{{ errors.date_of_task_execution}}
-										</span>
-									</div>
-								</div> -->
-
-
-								<!-- <div class="row">
-									<div class="{% if errors.deadline %}has-error{% endif %}" style="position: relative">
-										<span class="help-block">
-											<input type="text"
-												class="dateinput" 
-												placeholder="Deadline..."
-												name='deadline'
-												value='{{ request.POST.deadline }}'>
-											{{ errors.deadline}}
-										</span>
-									</div>
-								</div> -->
-
-						<!-- 		<div class="row">
-							<div>
-								<select name="status" id="status">
-									<option value="in the process">In the process</option>
-									<option value="done">Done</option>
-								</select>
-							</div>
-						</div> -->
-
-								<div class="row">
-									<button id="send_new_task_button" class="btn btn-default" type="submit" name="send_button">Add task</button>
-									<button id="hide_add_task_button" class="btn btn-default" type="submit" name="cancel_button">Close</button>
-								</div>
-
-								
-							</form>
-
-						</div>
-
-						
-					</div>
-
-				</div>
-
-			</div> <!-- end container-fluid -->
-		
-
-
-
-	<footer>
+			
+	<footer style= "position: fixed;
+				  z-index: 1000;
+				  bottom: 0;
+				  left: 0;
+				  right: 0;
+				  box-shadow: 0px -1px 10px 3px #264d00;
+				  background-color: #ecf9f2;
+				  padding-top: 10px;
+				  margin-top: 10px;
+				  color: black; 
+				  margin-top: 10px" >
 
 		<div class="row">
-	
+			
+
 			<div class="col-xs-12 col-md-3">
 			
 				<p>&copy; 2018 <span>Here you can plan your working week!</span></p>
