--- a/task_app/static/css/style.css
+++ b/task_app/static/css/style.css
@@ -3,6 +3,8 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300|Tangerine");
 /* colors */
 /* *** */
+
+/* base page */
 header {
   top: 0;
   left: 0;
@@ -70,6 +72,12 @@ input {
 tr:hover {
   cursor: pointer; }
 
+#share_task_button {
+  display: none;
+  
+}
+
+
 /* end base content */
 footer {
   position: fixed;
@@ -86,3 +94,19 @@ footer {
   margin-top: 10px}
 
 /*# sourceMappingURL=style.css.map */
+
+/* end of base page */
+
+/* send mail page */
+#task_title_span{
+  background-color: grey;
+  border-right: 15px;
+  color: white;
+}
+#recipient_name_span{
+  background-color: grey;
+  border-right: 15px;
+  color: white;
+}
+
+/* end send mail page */
