show date with task

--- a/task_app/static/css/style.css
+++ b/task_app/static/css/style.css
@@ -95,6 +95,11 @@ footer {
 
 /*# sourceMappingURL=style.css.map */
 
+#date_span{
+  background-color: grey;
+  color: white;
+}
+
 /* end of base page */
 
 /* task list table */
