--- a/task_app/templates/task_list.html
+++ b/task_app/templates/task_list.html
@@ -5,19 +5,14 @@
 	<div class="container-fluid">
 
 				<div class="row" id="date_row">
-					<!-- <div class=" col-xs-12 col-md-3 col-md-offset-2" id="date_div" style="position: relative">
-						<input class='date_input dateinput' id="calendar" type="text" name="calendar" 
-						placeholder="Choose date...">
-					</div>
-					<div class="col-xs-12 col-md-1" id="show_tasks_button">
-						<input type="button" value="Show tasks">
-					</div> -->
-					<div class="col-xs-12 col-md-6 col-md-offset-2">
+					
+					<div class="col-xs-12 col-md-6 col-md-offset-2 task_date_div">
 
 						{% if filtered_task_by_request_user %}
 							<p>You have task on next dates: <br>
 								{% for entry in filtered_task_by_request_user %}
-									| <span id="date_span">{{ entry.date_of_task_execution }}</span> |
+									| <span class='date_span' id="date_span">{{ entry.date_of_task_execution }}<input type="hidden" value="{{entry.id}}"></span>
+										 |
 								{% endfor %}
 							</p>
 						{% else %}
@@ -25,26 +20,6 @@
 						{% endif %}
 
 					</div>
-
-					<form action="{% url 'choose_date_add_tasks_show_tasks_view_url' %}"
-							method='post'
-							enctype="multipart/form-data"
-							name="calendar_form">
-								{% csrf_token %}
-
-							<div class="date_div col-xs-12 col-md-6 col-md-offset-2 
-										{% if chooses_date.errore %}has-error{% endif %}" id="date_div" style="position: relative">
-		
-								<span class="help-block">
-									<input class='date_input dateinput' id="calendar" type="text" name="chooses_date" 
-									placeholder="Choose date...">
-									{{ errors.chooses_date }}
-								</span>
-
-								<button id="show_task_button" type="submit" name="choose_date_button" class='btn btn-default'>Show tasks</button>
-							</div>
-
-					</form>
 
 				</div>
 
@@ -162,11 +137,6 @@
 
 								{% endfor %}
 
-							<!-- <div>
-								<button class="btn btn-default" name="edit_button">Edit</button>
-								<button class="btn btn-danger" type="submit" name="delete_button">Delete</button>
-							</div> -->
-
 					</div>
 
 
@@ -176,8 +146,6 @@
 				<div class="row">
 					<div class="col-md-4 col-md-offset-7 col-xs-12">
 					
-						<!-- <button id="show_add_task_button" class="btn btn-default" name="add_task">Add task</button>
-						 -->
 						<div id='add_task_div' class="add_task_form">
 
 							<h2>New Task</h2>
@@ -226,55 +194,7 @@
 									</div>
 								</div>
 
-							<!-- 	<div class="row">
-								<div class="{% if errors.priority %}has-error{% endif %}">
-									<span class="help-block">
-										<select name="prioriry" id="prioriry">
-											<option value="low">Low</option>
-											<option value="medium">Medium</option>
-											<option value="height">Height</option>
-										</select>
-										{{ errors.priority}}
-									</span>
-								</div>
-							</div> -->
-
-								<!-- <div class="row">
-									<div class="{% if errors.date_of_task_execution %}has-error{% endif %}" style="position: relative">
-										<span class="help-block">
-											<input type="text"
-												class="dateinput" 
-												placeholder="Date_of_task_execution..."
-												name='date_of_task_execution'
-												value='{{ request.POST.date_of_task_execution}}'>
-											{{ errors.date_of_task_execution}}
-										</span>
-									</div>
-								</div> -->
-
-
-								<!-- <div class="row">
-									<div class="{% if errors.deadline %}has-error{% endif %}" style="position: relative">
-										<span class="help-block">
-											<input type="text"
-												class="dateinput" 
-												placeholder="Deadline..."
-												name='deadline'
-												value='{{ request.POST.deadline }}'>
-											{{ errors.deadline}}
-										</span>
-									</div>
-								</div> -->
-
-						<!-- 		<div class="row">
-							<div>
-								<select name="status" id="status">
-									<option value="in the process">In the process</option>
-									<option value="done">Done</option>
-								</select>
-							</div>
-						</div> -->
-
+						
 								<div class="row">
 									<button id="send_new_task_button" class="btn btn-default" type="submit" name="send_button">Add task</button>
 									<button id="hide_add_task_button" class="btn btn-default" type="submit" name="cancel_button">Close</button>
