--- a/task_app/templates/task_list.html
+++ b/task_app/templates/task_list.html
@@ -16,7 +16,7 @@
 								{% endfor %}
 							</p>
 						{% else %}
-							<p>You has not task yet!</p>
+							<p>You do not have any tasks yet!</p>
 						{% endif %}
 
 					</div>
@@ -72,7 +72,7 @@
 								</table>
 
 							{% else %}
-									<h2>No tasks on this date!</h2>
+									<h2>No tasks!</h2>
 									<hr>
 							{% endif %}
 
