--- a/task_app/templates/base.html
+++ b/task_app/templates/base.html
@@ -45,6 +45,14 @@
 		</div>
 		
 	</header>
+	
+	<row>
+	    <div class='col-xs-3 col-xs-offset-1'>
+	        <a class='main_logo' href='{% url 'choose_date_add_tasks_show_tasks_view_url' %}'>
+	            <h1>Task Manager</h1>
+	        </a>
+	    </div>
+	</row>
 
 	{% block content %}
 	
@@ -52,10 +60,10 @@
 
 			
 	<footer style= "position: fixed;
-				  z-index: 1000;
-				  bottom: 0;
+					width: 100%;
+				  z-index: 0;
+				  bottom:0;
 				  left: 0;
-				  right: 0;
 				  box-shadow: 0px -1px 10px 3px #264d00;
 				  background-color: #ecf9f2;
 				  padding-top: 10px;
