--- a/task_app/templates/base.html
+++ b/task_app/templates/base.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
-<body>
+<body style='display: flex;
+    min-height: 100vh;
+    flex-direction: column;'>
 
 	<header style=' top: 0;
   					left: 0;
@@ -45,25 +47,26 @@
 		</div>
 		
 	</header>
-	
-	<row>
+	<div style='flex: 1 0 auto'>
+	<div class='row'>
 	    <div class='col-xs-3 col-xs-offset-1'>
 	        <a class='main_logo' href='{% url 'choose_date_add_tasks_show_tasks_view_url' %}'>
 	            <h1>Task Manager</h1>
 	        </a>
 	    </div>
-	</row>
+	</div>
 
 	{% block content %}
 	
 	{% endblock content %}
 
-			
-	<footer style= "position: fixed;
+	</div>
+	<footer style= "<!-- position: fixed;
 					width: 100%;
 				  z-index: 0;
 				  bottom:0;
-				  left: 0;
+				  left: 0; -->
+				  padding: 0;
 				  box-shadow: 0px -1px 10px 3px #264d00;
 				  background-color: #ecf9f2;
 				  padding-top: 10px;
