--- a/task_app/templates/edit_task.html
+++ b/task_app/templates/edit_task.html
@@ -9,7 +9,7 @@
 			{% csrf_token %}
 			{{ form.as_p }}
 
-			<button class="btn btn-default" type="submit">Update</button>
+			<button class="btn btn-default" type="submit" name='Update'>Update</button>
 			<a href="{% url 'choose_date_add_tasks_show_tasks_view_url' %}">Cancel</a>
 		</form>
 	</div>
