--- a/task_app/templates/base.html
+++ b/task_app/templates/base.html
@@ -1,8 +1,9 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>To Do List</title>
+	<title>{% trans 'Task Manager' %}</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 
@@ -32,14 +33,14 @@
 
 				<div class="col-xs-12 col-md-2 col-md-offset-4">
 					<a href="#">{{ user.username }}</a>
-					<a href="{% url 'account_logout' %}">Logout</a>
+					<a href="{% url 'account_logout' %}">{% trans 'Logout' %}</a>
 				</div>
 
 			{% else %}
 
 				<div class="col-xs-12 col-md-2 col-md-offset-2">
-					<a href="{% url 'account_signup' %}">Registration</a> |
-					<a href="{% url 'account_login' %}">Login</a>
+					<a href="{% url 'account_signup' %}">{% trans 'Registration' %}</a> |
+					<a href="{% url 'account_login' %}">{% trans 'Login' %}</a>
 				</div>
 
 			{% endif %}
@@ -52,7 +53,7 @@
 		<div class='row'>
 		    <div class='col-xs-3 col-xs-offset-1'>
 		        <a class='main_logo' href='{% url 'choose_date_add_tasks_show_tasks_view_url' %}'>
-		            <h1>Task Manager</h1>
+		            <h1>{% trans "Task Manager" %}</h1>
 		        </a>
 		    </div>
 		</div>
@@ -78,12 +79,12 @@
 		<div class="row">
 			
 
-			<div class="col-xs-12 col-md-3">
+			<div class="col-xs-12 col-md-4">
 			
-				<p>&copy; 2018 <span>Here you can plan your working week!</span></p>
+				<p>&copy; 2018 <span>{% trans 'Here you can plan your working week!' %}</span></p>
 			</div>
 
-			<div class="col-xs-12 col-md-2 col-md-offset-7"><p>
+			<div class="col-xs-12 col-md-2 col-md-offset-6"><p>
 				 Produced by <span style="font-family: 'Pacifico'; font-style: italic">Vasyl Pyrih</span></p>
 			</div>
 		</div>
