--- a/task_app/templates/task_list.html
+++ b/task_app/templates/task_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block content %}
 
@@ -9,14 +10,14 @@
 					<div class="col-xs-12 col-md-6 col-md-offset-2 task_date_div">
 
 						{% if filtered_task_by_request_user %}
-							<p>You have task on next dates: <br>
+							<p>{% trans 'You have task on next dates:' %} <br>
 								{% for entry in filtered_task_by_request_user %}
 									| <span class='date_span' id="date_span">{{ entry.date_of_task_execution }}<input type="hidden" value="{{entry.id}}"></span>
 										 |
 								{% endfor %}
 							</p>
 						{% else %}
-							<p>You do not have any tasks yet!</p>
+							<p>{% trans 'You do not have any tasks yet!' %}</p>
 						{% endif %}
 
 					</div>
@@ -30,18 +31,18 @@
 
 						{% if today_task_list %}
 
-							<h2>Task List</h2>
+							<h2>{% trans 'Task List' %}</h2>
 							<hr>
 													
 								<table class="table table-hover ">
 
 									<tr>
-										<th class="text-center">Title</th>
+										<th class="text-center">{% trans 'Title' %}</th>
 										
 										<!-- <th>Priority</th> -->
-										<th class="text-center">Status</th>
-										<th class="text-center">Who execute</th>
-										<th class="text-center">Task sent</th>
+										<th class="text-center">{% trans 'Status' %}</th>
+										<th class="text-center">{% trans 'Who execute' %}</th>
+										<th class="text-center">{% trans 'Task sent' %}</th>
 									</tr>
 
 									{% for entry in today_task_list %}
@@ -71,7 +72,7 @@
 								</table>
 
 							{% else %}
-									<h2>No tasks!</h2>
+									<h2>{% trans 'No tasks' %}!</h2>
 									<hr>
 							{% endif %}
 
@@ -89,7 +90,7 @@
 
 					<div id='task_detail_div' class='col-xs-12 col-md-4'>
 
-							<h2>Task Detail</h2>
+							<h2>{% trans "Task Detail" %}</h2>
 								<hr>
 
 								{% for entry in current_details %}
@@ -107,25 +108,25 @@
 									<hr>
 
 									<a href="{% url 'edit_task_url' pk=entry.id %}">
-										<button class="btn btn-default">Edit Task</button>
+										<button class="btn btn-default">{% trans "Edit Task" %}</button>
 									</a>
 
 									<a href="{% url 'delete_task_url' pk=entry.id %}">
-										<button class="btn btn-default">Delete Task</button>
+										<button class="btn btn-default">{% trans "Delete Task" %}</button>
 									</a>
 
 									
 									<hr>
 									<div id="user_selector">
-									<p>Select the user to pass this task</p>
+									<p>{% trans 'Select the user to pass this task' %}</p>
 										<select name="" id="selector">
-											<option value="">Users</option>
+											<option value="">{% trans 'Users' %}</option>
 											{% for user in users_list %}
 												<option value="{{ user.id }}">{{ user }}</option>
 											{% endfor %}
 										</select> <br>
 										<a href="{% url 'send_mail_url' pk=entry.id %}">
-											<button id='share_task_button' class="btn btn-default">Share Task</button>
+											<button id='share_task_button' class="btn btn-default">{% trans "Send Task" %}</button>
 										</a>
 									</div>
 
@@ -147,7 +148,7 @@
 					
 						<div id='add_task_div' class="add_task_form">
 
-							<h2>New Task</h2>
+							<h2>{% trans 'New Task' %}</h2>
 								<hr>
 
 							<form action="{% url 'choose_date_add_tasks_show_tasks_view_url' %}"
@@ -195,8 +196,8 @@
 
 						
 								<div class="row">
-									<button id="send_new_task_button" class="btn btn-default" type="submit" name="send_button">Add task</button>
-									<button id="hide_add_task_button" class="btn btn-default" type="submit" name="cancel_button">Close</button>
+									<button id="send_new_task_button" class="btn btn-default" type="submit" name="send_button">{% trans 'Add task' %}</button>
+									<button id="hide_add_task_button" class="btn btn-default" type="submit" name="cancel_button">{% trans 'Close' %}</button>
 								</div>
 
 								
