--- a/task_app/templates/account/logout.html
+++ b/task_app/templates/account/logout.html
@@ -1,11 +1,11 @@
 {% extends "account/base.html" %}
-
+{% load i18n %}
 {% block content %}
 
 	<div class="col-xs-12 col-md-12 text-center">
-		<h1>Logout Section</h1>
+		<h1>{% trans "Logout Section"%}</h1>
 
-		<p>'Are you sure you want to logout?'</p>
+		<p>{% trans 'Are you sure you want to logout'%}?</p>
 
 		<form method="post" action="{% url 'account_logout' %}">
 		  {% csrf_token %}
@@ -16,7 +16,7 @@
 
 		  {% endif %}
 
-		  <button type="submit">Logout</button> | <a href="{% url 'choose_date_add_tasks_show_tasks_view_url' %}">Back to tasks</a>
+		  <button type="submit">{% trans 'Logout' %}</button> | <a href="{% url 'choose_date_add_tasks_show_tasks_view_url' %}">{% trans 'Back to tasks' %}</a>
 		
 		</form>
 
